@@ -257,6 +257,8 @@ Documentation
  4. LUCENE-740: Added SNOWBALL-LICENSE.txt to the snowball package and a
     remark about the license to NOTICE.TXT. (Steven Parkes via Michael Busch)
 
+ 5. LUCENE-925: Added analysis package javadocs. (Grant Ingersoll and Doron Cohen)
+
 Build
 
  1. LUCENE-802: Added LICENSE.TXT and NOTICE.TXT to Lucene jars.
